<resources>
    <string name="app_name">MovieApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_video_play">Play button for video</string>
    <string name="description_detail_poster">Poster Image of the show you clicked</string>
    <string name="add_favorites_text">Add to Favorites:</string>
    <string name="no_internet_connection">No internet Connectivity. Please connect and try again</string>
    <string name="trailer_not_available_error">Trailer not available</string>
    <string name="page_key_preference">page</string>
    <string name="character_text">Characters:</string>
    <string name="similar_shows_text">Similar Shows:</string>
    <string name="sort_default">0</string>
    <string name="sort_title">Sort Order</string>
    <string-array name="sort_name">
        <item>
            Most Popular
        </item>
        <item>
            Highest Rated
        </item>
        <item>
            Favourites
        </item>
    </string-array>
    <string-array name="quotes_sort_name">
        <item>
            Once a day
        </item>
        <item>
            Twice a day
        </item>
        <item>
            Thrice a day
        </item>
    </string-array>
    <string-array name="sort_values">
        <item>
            0
        </item>
        <item>
            1
        </item>
        <item>
            2
        </item>
    </string-array>
    <string-array name="quotes_sort_values">
        <item>
            3
        </item>
        <item>
            4
        </item>
        <item>
            5
        </item>
    </string-array>
    <string name="preferences_key">order</string>
    <string name="sort_by">Settings</string>
    <string name="added_favorites">Added to Favourites</string>
    <string name="removed_favourites">Removed from Favourites</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="splash_dialog_message">"Do you want to receive quotes as notification?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="job_tag">quote</string>
    <string name="add_to_widget">Added to Widget</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="once_day">Once a day</string>
    <string name="twice_day">Twice a day</string>
    <string name="thrice_day">Thrice a day</string>
    <string name="msg_quote_once">Quotes set to receive one time in a Day</string>
    <string name="msg_quote_twice">Quotes set to receive two time in a Day</string>
    <string name="msg_quote_thrice">Quotes set to receive three time in a Day</string>
    <string name="quote_today">Quote for today</string>
    <string name="quotes_scheduled">Quotes successfully scheduled to receive once in a day.</string>
    <string name="quote_switch_key">quote_preference</string>
    <string name="time_key">time</string>
    <string name="switch_title">Receive Quotes</string>
    <string name="time_preference_title">Time picker for Quotes</string>
    <string name="desc_widget">Floating button to add the movie on widget.</string>
    <string name="share_quote_desc">Floating Button for sharing the quote.</string>
    <string name="title_widget">Title: </string>
    <string name="release_widget">Release: </string>
    <string name="rating_widget">Rating: </string>
    <string name="rate_star_content_description">rate star</string>
    <string name="rating_value">9.5/10</string>
    <string name="overview_value">This is the overview of this show</string>
    <string name="characters_headline">Characters:</string>
    <string name="similar_shows_headline">Similar Shows:</string>
    <string name="favorite">Favorite</string>
</resources>
