<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="@color/backgroundLight">

        <!--<FrameLayout-->
        <!--android:id="@+id/poster_image_view_container"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="5dp">-->

        <!--<ImageView-->
        <!--android:id="@+id/poster_image_view"-->
        <!--android:layout_width="140dp"-->
        <!--android:layout_height="170dp"-->
        <!--android:layout_margin="5dp"-->
        <!--android:contentDescription="@string/description_detail_poster"-->
        <!--android:elevation="4dp"-->
        <!--android:scaleType="centerCrop" />-->

        <!--<ProgressBar-->
        <!--android:id="@+id/progress_poster"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center" />-->

        <!--</FrameLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_rateStar"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@mipmap/star_filled_50"
                        android:contentDescription="@string/rate_star_content_description"
                        android:scaleType="centerInside" />

                    <TextView
                        android:id="@+id/rating_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        tools:text="@string/rating_value" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <com.github.ivbaranov.mfb.MaterialFavoriteButton
                        android:id="@+id/favorite_material_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:mfb_animate_favorite="true"
                        app:mfb_animate_unfavorite="false"
                        app:mfb_bounce_duration="300"
                        app:mfb_color="white"
                        app:mfb_padding="0"
                        app:mfb_rotation_angle="360"
                        app:mfb_rotation_duration="400"
                        app:mfb_size="25"
                        app:mfb_type="heart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favorite"
                        android:textColor="@color/textColor"
                        android:textSize="15sp"
                        tools:text="@string/favorite" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/overview_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="2dp"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                tools:text="@string/overview_value" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/recycler_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/backgroundLight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="serif"
                    android:text="@string/character_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/characters_headline" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/character_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/backgroundLight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="serif"
                    android:text="@string/similar_shows_text"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/similar_shows_headline" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/similar_shows_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>